<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item android:title="@string/ad_category_products">
        <menu>
            <item
                android:id="@+id/id_ad_my_ads"
                android:title="@string/ad_my_ads"></item>
            <item
                android:id="@+id/id_ad_car"
                android:title="@string/ad_car"></item>
            <item
                android:id="@+id/id_ad_pc"
                android:title="@string/ad_pc"></item>
            <item
                android:id="@+id/id_ad_smartphone"
                android:title="@string/ad_smartphone"></item>
            <item
                android:id="@+id/id_ad_ha"
                android:title="@string/ad_ha"></item>
        </menu>
    </item>

    <item android:title="@string/ad_category_acc">
        <menu>
            <item
                android:id="@+id/id_ac_sign_in"
                android:title="@string/ac_sign_in"></item>
            <item
                android:id="@+id/id_ac_sign_up"
                android:title="@string/ac_sign_up"></item>
            <item
                android:id="@+id/id_ac_sign_out"
                android:title="@string/ac_sign_out"></item>
        </menu>
    </item>

</menu>